additional changes from reviewers

--- a/vignettes/vcr_fish_vignette.Rmd
+++ b/vignettes/vcr_fish_vignette.Rmd
@@ -15,8 +15,8 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-#library(lterdatasets)
-library(vcrfish)
+library(lterdatasets)
+#library(vcrfish)
 library(tidyverse)
 ```
 
@@ -49,11 +49,14 @@ Let's take a closer look at differences between fish species to learn more.
 unique(vcr_fish$species_name)
 ```
 
-In the code below, I am filtering the fish species type to have greater than 200 samples to ensure that there is a sufficient sample size in our analyses later on.
+Before continuing to any exploratory analyses, it is always important to check the sample size of the variables in question.
 ```{r}
 # Count the number of names 
 names_count <- table(vcr_fish$species_name)
-
+names_count
+```
+There is a large disparity in the recorded fish species above--there are 442 rows of data collected on Pipefish, whereas there are only  2 rows collected on the Pufferfish. In the code below, I am filtering the fish species type to have greater than 200 samples to ensure that there is a sufficient sample size in our analyses later on.
+```{r}
 # Subset the orginial dataset with only the species names specified by the line above.
 vcr_fish2 <- subset(vcr_fish, species_name %in% names(names_count[names_count > 200]))
 ```
@@ -122,4 +125,12 @@ ggplot(data = vcr_fish3, aes(x=species_name, y=length, color=species_name)) +
   theme(plot.title = element_text(hjust = 0.5)) 
 ```
 Overall, we see that pipefish as a whole species are longer than the other fish species given they have the highest median value around 140.
+
+# Citation 
+  
+McGlathery, K. 2019. Fish Counts and Lengths in South Bay and Hog Island Bay, Virginia 2012-2018 ver 11. Environmental Data Initiative. https://doi.org/10.6073/pasta/af32b580d4646f4b35d7552d83e9b09b (Accessed 2021-03-18). 
+  
+  
+# How we processes the raw data 
+`r knitr::spin_child(here::here("data-raw","vcr_fish_data.R"))` 
 
